// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Avatar Avatar shapes 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 100%;
  background: #C813D5;
  overflow: hidden;
  position: relative;
  font-size: 0.8125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #fff;
}

.emotion-2 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #fff;
  width: 1.125rem;
  height: 1.125rem;
}

.emotion-4 path {
  fill: #fff;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.25rem;
  height: 2.25rem;
  border-radius: 100%;
  background: #C813D5;
  overflow: hidden;
  position: relative;
  font-size: 0.875rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #fff;
}

.emotion-5 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  fill: #fff;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-7 path {
  fill: #fff;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.875rem;
  height: 2.875rem;
  border-radius: 100%;
  background: #d4f1ff;
  overflow: hidden;
  position: relative;
  font-size: 1.125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #0e0e17;
}

.emotion-8 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-10 {
  fill: #0e0e17;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-10 path {
  fill: #0e0e17;
}

.emotion-11 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3.5rem;
  height: 3.5rem;
  border-radius: 100%;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 1.125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #0e0e17;
}

.emotion-11 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-15 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 0.5rem;
  background: #C813D5;
  overflow: hidden;
  position: relative;
  font-size: 0.8125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #fff;
}

.emotion-15 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-18 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.25rem;
  height: 2.25rem;
  border-radius: 0.5rem;
  background: #C813D5;
  overflow: hidden;
  position: relative;
  font-size: 0.875rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #fff;
}

.emotion-18 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-21 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.875rem;
  height: 2.875rem;
  border-radius: 0.5rem;
  background: #d4f1ff;
  overflow: hidden;
  position: relative;
  font-size: 1.125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #0e0e17;
}

.emotion-21 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-24 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3.5rem;
  height: 3.5rem;
  border-radius: 0.5rem;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 1.125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #0e0e17;
}

.emotion-24 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          circular
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-4"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-5"
        >
          
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-7"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-8"
        >
          
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-10"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-11"
        >
          
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-10"
            />
          </span>
        </div>
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          regular
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-15"
        >
          
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-4"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-18"
        >
          
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-7"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-21"
        >
          
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-10"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-24"
        >
          
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-10"
            />
          </span>
        </div>
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          rounded
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-15"
        >
          
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-4"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-18"
        >
          
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-7"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-21"
        >
          
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-10"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-24"
        >
          
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-10"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar Avatar with icon 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 100%;
  background: #C813D5;
  overflow: hidden;
  position: relative;
  font-size: 0.8125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #fff;
}

.emotion-2 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #fff;
  width: 1.125rem;
  height: 1.125rem;
}

.emotion-4 path {
  fill: #fff;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.25rem;
  height: 2.25rem;
  border-radius: 100%;
  background: #C813D5;
  overflow: hidden;
  position: relative;
  font-size: 0.875rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #fff;
}

.emotion-5 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  fill: #fff;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-7 path {
  fill: #fff;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.875rem;
  height: 2.875rem;
  border-radius: 100%;
  background: #d4f1ff;
  overflow: hidden;
  position: relative;
  font-size: 1.125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #0e0e17;
}

.emotion-8 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-10 {
  fill: #0e0e17;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-10 path {
  fill: #0e0e17;
}

.emotion-11 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3.5rem;
  height: 3.5rem;
  border-radius: 100%;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 1.125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #0e0e17;
}

.emotion-11 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          />
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-5"
      >
        
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-7"
          />
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-8"
      >
        
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-10"
          />
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-11"
      >
        
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-10"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar Avatar with letter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 100%;
  background: #C813D5;
  overflow: hidden;
  position: relative;
  font-size: 0.8125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #fff;
}

.emotion-2 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.25rem;
  height: 2.25rem;
  border-radius: 100%;
  background: #C813D5;
  overflow: hidden;
  position: relative;
  font-size: 0.875rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #fff;
}

.emotion-3 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.875rem;
  height: 2.875rem;
  border-radius: 100%;
  background: #d4f1ff;
  overflow: hidden;
  position: relative;
  font-size: 1.125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #0e0e17;
}

.emotion-4 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3.5rem;
  height: 3.5rem;
  border-radius: 100%;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 1.125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #0e0e17;
}

.emotion-5 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        
        CZ
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-3"
      >
        
        CZ
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-4"
      >
        
        GR
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-5"
      >
        
        G
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar Avatar with src 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 100%;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 0.8125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #0e0e17;
}

.emotion-2 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.25rem;
  height: 2.25rem;
  border-radius: 100%;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 0.875rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #0e0e17;
}

.emotion-3 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.875rem;
  height: 2.875rem;
  border-radius: 100%;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 1.125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #0e0e17;
}

.emotion-4 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3.5rem;
  height: 3.5rem;
  border-radius: 100%;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 1.125rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #0e0e17;
}

.emotion-5 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <img
          src="https://material-ui.com/static/images/avatar/1.jpg"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-3"
      >
        <img
          src="https://material-ui.com/static/images/avatar/1.jpg"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-4"
      >
        <img
          src="https://material-ui.com/static/images/avatar/1.jpg"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-5"
      >
        <img
          src="https://material-ui.com/static/images/avatar/1.jpg"
        />
      </div>
    </div>
  </div>
</div>
`;
